updates to the equilibriumHCO3 readers (addition of water self-ionization)

--- a/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_A.Rmd
+++ b/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_A.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
   | Local Equilibrium Chemistry in R --- part II:
-  | Two Equilibrium Reactions
+  | Three Equilibrium Reactions
 subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
 author: "Lubos Polerecky and Karline Soetaert, Utrecht University"
 date: "February 2021"
@@ -15,7 +15,7 @@ output:
 
 ## Task 1: Mass balance equations of the carbonate system
 
-Assuming that the forward and backward reactions are elementary, we can use the first-order kinetics to describe the rate laws for each reaction. Considering the stoichiometry of Reactions 1 and 2, we obtain the following mass balance equations:
+Assuming that the forward and backward reactions are elementary, we can use the first-order kinetics to describe the rate laws for each reaction. Considering the stoichiometry of Reactions 1--3, we obtain the following mass balance equations:
 
 $$
 \begin{array}{rclr}
@@ -26,7 +26,11 @@ $$
 \displaystyle
 \frac{d[CO_3^{2-}]}{dt} & = & -R_2  & \qquad (1c)\\[5mm]
 \displaystyle
-\frac{d[H^+]}{dt} & = & -R_1 - R_2 & \qquad (1d)
+\frac{d[OH^-]}{dt} & = & - R_3  & \qquad (1d)\\[5mm]
+\displaystyle
+\frac{d[H^+]}{dt} & = & -R_1 - R_2 - R_3 & \qquad (1e)\\[5mm]
+\displaystyle
+\frac{d[H_2O]}{dt} & = & R_3  & \qquad (1f)\\[5mm]
 \end{array}
 $$
 
@@ -42,34 +46,51 @@ R_2 = - k_{2f} \cdot [HCO_3^{-}] + k_{2b} \cdot [CO_3^{2-}] \cdot [H^+]
 \qquad\hspace{2cm} (2b)
 $$
 
-Note that the rate $R_C$ of the slow process only affects $H_2CO_3$.
+$$
+R_3 = - k_{3f} \cdot [H_2O] + k_{3b} \cdot [OH^{-}] \cdot [H^+] 
+\qquad\hspace{2cm} (2c)
+$$
+
+Note that the rate of the slow process, $R_C$, only affects $H_2CO_3$.
 
 ## Task 2: Equilibrium conditions
 
-In the absence of the removal process RC, the carbonate species will reach an equilibrium as a result of the reversible reactions 1 and 2. In this equilibrium, the time derivative of each species in the system is zero. Based on equations 1a and 2a, we obtain $R_1=0$, which yields the relationship
+In the absence of the slow process (i.e., $R_C=0$), the carbonate species will reach an equilibrium as a result of the reversible reactions 1 and 2. In this equilibrium, the time derivative of each species in the system is zero. Based on equations 1a and 2a, we obtain $R_1=0$, which yields the relationship
 
 $$
-K_{1} = \frac{ [HCO_3^-] \cdot [H^+] }{ [H_2CO_3] } \qquad\hspace{2cm} (3a)
+K_{1} = \frac{ [HCO_3^-] \cdot [H^+] }{ [H_2CO_3] }. \qquad\hspace{2cm} (3a)
 $$
 Similarly, based on equation 1c and 2b, we obtain $R_2=0$, which yields the relationship
 $$
-K_{2}  = \frac{ [CO_3^{2-}] \cdot [H^+] }{[HCO_3^-]} 
+K_{2}  = \frac{ [CO_3^{2-}] \cdot [H^+] }{[HCO_3^-]} .
 \qquad\hspace{2cm} (3b)
 $$
-
-Here, we defined the dissociation constants $K_1$ and $K_2$ as $K_1 = k_{1f}/k_{1b}$ and $K_2 = k_{2f}/k_{2b}$. If relationships 3a and 3b are true, then the time derivatives in equations 1b and 1d are zero. This means that these two equations do *not* provide any *extra* information for the equilibrium concentrations.
+Finally, the equilibrium condition implies $R_3=0$, which combined with Eq. 2c yields
+$$
+K_w'  = \frac{ [OH^-] \cdot [H^+] }{[H_2O]}. 
+\qquad\hspace{2cm} (3c)
+$$
+Here, we defined the dissociation constants according to $K_1 = k_{1f}/k_{1b}$, $K_2 = k_{2f}/k_{2b}$, and $K_w' = k_{3f}/k_{3b}$. The constant $K_w'$ is typically expressed in terms of the ionic product of water, $K_w = [OH^-]\cdot [H^+]$. A comparison of this definition with Eq. 3c yields a relationship $K_{w} = K_w' \cdot [H_2O]$.
+If relationships 3a--c are true, then the time derivatives in equations 1b--f are zero. This means that these three equations do *not* provide any *extra* information for the equilibrium concentrations.
 
 ## Task 3: Lump-sum species
 
-By summing equations 1a, 1b and 1c, we obtain 
+By summing equations 1a, 1b and 1c, and additionally considering the proposed definition of the lump-sum variable $[DIC]$, we obtain 
 $$
-\frac{d[DIC]}{dt} = R_C \qquad\hspace{2cm} (4a)
+\frac{d[DIC]}{dt} = R_C. \qquad\hspace{2cm} (4a)
 $$
-Similarly, by summing equation 1b with equation 1c multiplied with a factor of 2, and finally subtracting equation 1d, we obtain
+Similarly, by summing equation 1b with equation 1d and equation 1c multiplied with a factor of 2, then subtracting equation 1e, and additionally considering the proposed definition of the lump-sum variable $[ALK]$, we obtain
 $$
-\frac{d[ALK]}{dt} = 0 \qquad\hspace{2cm} (4b)
+\frac{d[ALK]}{dt} = 0. \qquad\hspace{2cm} (4b)
 $$
-These equations show that DIC is *added* at a rate of the *slow process* ($R_C$), while ALK is *conserved* (not changing in time). Notably, both DIC and ALK are *not* effected by the fast equilibration reactions.
+Finally, by summing equation 1d with equation 1f and additionally considering the proposed definition of the lump-sum variable $[H_2O_{tot}]$, we obtain
+$$
+\frac{d[H_2O_{tot}]}{dt} = 0. \qquad\hspace{2cm} (4c)
+$$
+
+### Key take-home message
+
+These equations show that under the assumption of a local chemical equilibrium, $DIC$ is *added* at a rate of the *slow process* ($R_C$), while $ALK$ and $H_2O_{tot}$ are *conserved* (not changing over time). Notably, $DIC$, $ALK$ and $H_2O_{tot}$ are *not* affected by the fast reversible reactions!
 
 ## Task 4: From lump-sum species to original species
 
@@ -106,52 +127,75 @@ $$
 \qquad\hspace{2cm} (5c)
 $$
 
-Once the concentrations $[HCO_3^-]$, $[CO_3^{2-}]$ and $[H^+]$ are known, the carbonate alkalinity is calculated based on the definition:
+Regarding the concentration of $[OH^-]$, it can be calculated from $[H^+]$ based on the relationship 3c. First, by substituting $[H_2O]$ based on the definition of $H_2O_{tot}$, we obtain
+$$
+K_w = \frac{[OH^-]\cdot [H^+]}{[H_2O_{tot}] - [OH^-]},
+$$
+which upon rearrangement yields the accurate relationship
+$$
+[OH^-] = \frac{K_w'}{K_w' + [H^+]}\cdot [H_2O_{tot}]. \qquad\hspace{2cm} (5d)
+$$
+This relationship can be simplified considering that for typical pH values of 1--12, the concentrations of $H^+$ are in the range of $10^{-12}$--$10^{-1}~mol~L^{-1}$. Thus, the dissociation constant $K_w' = 1.81\times10^{-16}~mol~L^{-1}$ in the denominator can be neglected, yielding 
+$$
+[OH^-] \approx \frac{K_w'}{[H^+]}\cdot [H_2O_{tot}].
+$$
+Using the same argument, the ratio $K_w'/[H^+]$ is in the range of $10^{-15}$--$10^{-4}$, which makes the concentration of $[OH^-]$ negligible in comparison to the concentration of $H_2O$ (i.e., $[H_2O_{tot}]\approx [H_2O]$). Thus, using the last equation, the expression for $[OH^-]$ can be well approximated by\footnote{This result is equivalent to the commonly used expression of the water selfionization equilibrium $K_w = [OH^-]\cdot [H^+]$.}
+$$
+[OH^-] = \frac{K_w}{[H^+]}. \qquad\hspace{2cm} (5d')
+$$
+
+Once the concentrations $[HCO_3^-]$, $[CO_3^{2-}]$, $[OH^-]$, and $[H^+]$ are known, the carbonate alkalinity is calculated based on the definition:
 
 $$
-[ALK] = [HCO_3^-] + 2\cdot [CO_3^{2-}] - [H^+]
-\qquad\hspace{2cm} (5d)
+[ALK] = [HCO_3^-] + 2\cdot [CO_3^{2-}] + [OH^-] - [H^+]
+\qquad\hspace{2cm} (5e)
 $$
 
-Because $[HCO_3^-]$ and $[CO_3^{2-}]$ depend on $[DIC]$ and $[H^+]$ (see 5a and 5c), \bf equation 5d provides an intimate relationship between $[ALK]$, $[DIC]$ and $[H^+]$ \rm when the carbonate species are in an equilibrium. Using this relationship, one can calculate 
+### Key take-home message
 
-* $[ALK]$ if the values of $[DIC]$ and $[H^+]$ are known, or
+Because $[HCO_3^-]$ and $[CO_3^{2-}]$ depend on $[DIC]$ and $[H^+]$ (see $5a$ and $5c$), and $[OH^-]$ depends on $[H^+]$ (see $5d$ or $5d'$), \bf equation 5e provides an intimate relationship between $[ALK]$, $[DIC]$ and $[H^+]$ \rm when the carbonate species are in an equilibrium. Using this relationship, one can calculate 
 
-* $[H^+]$ if the values of $[DIC]$ and $[ALK]$ are known, or
+1. $[ALK]$ if the values of $[DIC]$ and $[H^+]$ are known, or
 
-* $[DIC]$ if the values of $[H^+]$ and $[ALK]$ are known.
+2. $[DIC]$ if the values of $[H^+]$ and $[ALK]$ are known, or
 
-Because equation 5d is highly non-linear, these calculations are done numerically.
+3. $[H^+]$ if the values of $[DIC]$ and $[ALK]$ are known.
+
+Note that equation $5e$ is highly non-linear; thus these calculations need to be done *numerically*. This contrasts to Part I of this reader, where it was possible to also find an analytical solution. Although this is no longer possible when the number of fast acid-base reactions (e.g., Reactions 1--3) increases, we can proceed thanks to numerical solvers (see next section).
+
+Another important point to note here is the statement 3: $[H^+]$ *can be calculated* if the values of $[DIC]$ and $[ALK]$ are known. This statement is the basis for the *general* approach in pH modeling: one needs to first *identify the appropriate lump-sum species* (e.g., $DIC$ and $ALK$) and then formulate the *effect of each slow process* on these lump-sum species (e.g., addition or removal of $DIC$ [e.g., 4a] and $ALK$ [e.g., 4b]).\footnote{Strictly speaking, one should also identify the effects of the slow processes on the lump-sum species $H_2O_{tot} = H_2O + OH^-$. However, due to the vastly larger concentration of $H_2O$ in an aquatic setting compared to all other species involved, the effects of processes such as mineral dissolution/precipitation, redox or acid-base reactions, and others, are typically negligible and the water concentration can be considered as constant.} Then, by solving the differential equations for the lump-sum species numerically, one can quantify the corresponding evolution of pH based on the statement 3. This will be illustrated in the following section. 
 
 ## Task 5: Application to atmospheric CO$_2$ exchange 
 
 ### Implementation in R
 
-First, we define a function that calculates carbonate alkalinity from the known concentration of DIC and pH (equation 5d).
+First, we define a function that calculates carbonate alkalinity from the known concentration of DIC and pH (equation 5e).
 
 ```{r}
-solveALK <- function(K1 = 1.422e-06, K2 = 1.082e-09, DIC, pH){
+solveALK <- function(K1 = 0.773e-06, K2 = 0.352e-09, Kw = 1e-14, DIC, pH){
   
   H      <- 10^(-pH)
   HCO3   <- K1*H  / (H^2 + K1*H + K1*K2) * DIC    # eq 5a
   CO3    <- K1*K2 / (H^2 + K1*H + K1*K2) * DIC    # eq 5c
-  ALK    <- HCO3 + 2*CO3 - H                      # eq 5d
+  OH     <- Kw/H                                  # eq 5d'
+  ALK    <- HCO3 + 2*CO3 + OH - H                 # eq 5e
   
   return(ALK)
 }
 ```
 
-Second, we define a function that calculates $[H^+]$ from the known carbonate alkalinity and DIC concentration (equation 5d). This is done by finding a root of a function defined as the left-hand-side minus the right-hand-side of equation 5d.
+Second, we define a function that calculates $[H^+]$ from the known carbonate alkalinity and DIC concentration (equation 5e). This is done by finding, using a numerical solver, the root of a function defined as the left-hand-side minus the right-hand-side of equation 5e.
 
 ```{r}
-solveH <- function(K1 = 1.422e-06, K2 = 1.082e-09, DIC, ALK){
+solveH <- function(K1 = 0.773e-06, K2 = 0.352e-09, Kw = 1e-14, DIC, ALK){
   
   # function whose root has to be sought
   rootFun <- function(H) {
     
     HCO3    <- K1*H  / (H^2 + K1*H + K1*K2) * DIC   # eq 5a
     CO3     <- K1*K2 / (H^2 + K1*H + K1*K2) * DIC   # eq 5c
-    ALK.est <- HCO3 + 2*CO3 - H  # right-hand-side of eq. 5d
+    OH      <- Kw/H                                 # eq 5d
+    ALK.est <- HCO3 + 2*CO3 + OH - H # right-hand-side of eq. 5e
     
     return(ALK.est - ALK)
   }
@@ -162,11 +206,17 @@ solveH <- function(K1 = 1.422e-06, K2 = 1.082e-09, DIC, ALK){
 }
 ```
 
-It is always good to test the functions
+It is always good to test the functions. For $[DIC] = 2~mmol~L^{-1}$ and $[ALK] = 2.2~mmol~L^{-1}$, we expect $pH$ to be around $8$, and when we substitute that pH value to calculate $[ALK]$, we expect to get the original value. Indeed, the results are as expected:
 
 ```{r}
-(pH  <- -log10(solveH(DIC = 2e-3, ALK = 2.18e-3)))
-(ALK <- solveALK(DIC = 2e-3, pH = 8))
+(pH.new  <- -log10(solveH(DIC = 2.0e-3, ALK = 2.2e-3)))
+(ALK <- solveALK(DIC = 2e-3, pH = pH.new))
+```
+
+On the other hand, if the water contains no dissolved $CO_2$ ($[DIC] = 0$) and has zero carbonate alkalinity ($[ALK]=0$), we expect its pH to be 7. Indeed, that is what we obtain:
+
+```{r}
+(pH.neutral  <- -log10(solveH(DIC = 0, ALK = 0)))
 ```
 
 The model function that implements the model based on the local equilibrium assumption is defined below. Note that the equilibrium constants (dissociation constants) are in $mol~L^{-1}$, so all species should be in this unit!
@@ -180,12 +230,13 @@ CO2dissol <- function(t, state, parms) {
     dALK <- 0
 
     # for output
-    H    <- solveH(K1 = K1, K2 = K2, DIC = DIC, ALK = ALK)
+    H    <- solveH(K1 = K1, K2 = K2, Kw = Kw, DIC = DIC, ALK = ALK)
     HCO3 <- K1*H  / (H^2 + K1*H + K1*K2) * DIC   # eq 5a
     CO3  <- K1*K2 / (H^2 + K1*H + K1*K2) * DIC   # eq 5c
+    OH   <- Kw/H                                 # eq 5d'
     
     return(list(c(dDIC, dALK), 
-                pH = -log10(H), H = H, 
+                pH = -log10(H), H = H, OH = OH,
                 H2CO3 = DIC - HCO3 - CO3,
                 HCO3 = HCO3,
                 CO3  = CO3))
@@ -199,8 +250,9 @@ Now we run the model for 10 days, using the initial conditions given in the task
 require(deSolve)
 
 pars    <- c(RC = 0.1e-3,    # [mol/L/day]
-             K1 = 1.422e-06, # [mol/L]
-             K2 = 1.082e-09) # [mol/L]
+             K1 = 0.773e-06, #K1 = 1.422e-06, # [mol/L]
+             K2 = 0.352e-09, #K2 = 1.082e-09, # [mol/L]
+             Kw = 1e-14)     # [mol^2/L^2]
 
 pH.ini  <- 8
 DIC.ini <- 2e-3
@@ -214,4 +266,4 @@ out     <- ode(y=yini, times=times, func=CO2dissol, parms=pars)
 plot(out, mfrow = c(2,4), las = 1)
 ```
 
-We see that the addition of $CO_2$ at the given rate leads to an acidification of the water from the initial pH of 8 to pH of about 6.3 after 10 days.
+We see that the addition of $CO_2$ at the given rate leads to an acidification of the water from the initial pH of 8 to pH of about 6.5 after 10 days.
