--- a/inst/exercises/chemistry/equilibriumNH3/equilibriumNH3_A.Rmd
+++ b/inst/exercises/chemistry/equilibriumNH3/equilibriumNH3_A.Rmd
@@ -66,4 +66,4 @@ plot(out, mfrow=c(2,4), xlab="time (d)")
 ```
 We see that the most dramatic changes occur within the first 5 days, where the pH decreases from 8 until about 6. This shift towards a lower pH (higher [H$^+$]) causes the speciation of total ammonium to shift towards low [NH$_3$]. After 5 days, the NH$_3$ concentration is so low that the rate of its removal is close to zero (because the rate is proportional to [NH$_3$]), leading to a much slower pH dynamics.
 
-An interesting outcome of the model is that the *total* ammonia concentration in the lake does *not* decrease appreciably (from 1 mmol/L to about 0.95 mmol/L). This means that degassing of ammonia from a pH-unbuffered system is *not* going to remove the ammonia from the lake water. The lake would stop smelling bad, but it would not stop being polluted. Note, however, that this corresponds to an unrealistic assumption that ammonia degassing is the only process that affects the pH of the lake water.
+An interesting outcome of the model is that the *total* ammonia concentration in the lake does *not* decrease appreciably (from 1 mmol/L to about 0.95 mmol/L). This means that degassing of ammonia from a pH-unbuffered system is *not* going to remove the ammonia from the lake water. The lake would stop smelling bad, but it would not stop being polluted. Note, however, that this result is derived based on an unrealistic assumption that ammonia degassing is the only process that affects the pH of the lake water. To overcome this problem, we need to enhance the model with other relevant processes, namely water dissociation and buffering by dissolved inorganic carbon, which will be done in the next exercises.
