--- a/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_A.Rmd
+++ b/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_A.Rmd
@@ -70,8 +70,9 @@ $$
 K_w'  = \frac{ [OH^-] \cdot [H^+] }{[H_2O]}. 
 \qquad\hspace{2cm} (3c)
 $$
-Here, we defined the dissociation constants according to $K_1 = k_{1f}/k_{1b}$, $K_2 = k_{2f}/k_{2b}$, and $K_w' = k_{3f}/k_{3b}$. The constant $K_w'$ is typically expressed in terms of the ionic product of water, $K_w = [OH^-]\cdot [H^+]$. A comparison of this definition with Eq. 3c yields a relationship $K_{w} = K_w' \cdot [H_2O]$.
-If relationships 3a--c are true, then the time derivatives in equations 1b--f are zero. This means that these three equations do *not* provide any *extra* information for the equilibrium concentrations.
+Here, we defined the dissociation constants according to $K_1 = k_{1f}/k_{1b}$, $K_2 = k_{2f}/k_{2b}$, and $K_w' = k_{3f}/k_{3b}$. If relationships 3a--c are true, then the time derivatives in equations 1b--f are zero. This means that these three equations do *not* provide any *extra* information for the equilibrium concentrations.
+
+Note that in literature, the *ionic product of water*, $K_w = [OH^-]\cdot [H^+] \approx 10^{-14}~mol^2~L^{-2}$ is more commonly reported in the context of water self-ionization. This value should, however, *not* be confused with the equilibrium constant $K_w'$. The correct value of $K_w'$ is calculated by dividing $K_w$ with the concentration of water, $[H_2O]\approx 55.3~mol~L^{-1}$, as shown in Eq. 3c (see table in Task 2).
 
 ## Task 3: Lump-sum species
 
@@ -100,7 +101,7 @@ $$
 [DIC] = [HCO_3^-] + [H^+]\cdot \frac{[HCO_3^-]}{K_{1}} + K_{2}\cdot \frac{ [HCO_3^-]}{[H^+]}
 $$
 
-When we bring each term on the right-hand side to the common denominator ($K_1\cdot [H^+]$), we obtain
+When we express each term on the right-hand side using the common denominator ($K_1\cdot [H^+]$), we obtain
 
 $$
 [DIC] = \frac{K_1\cdot[H^+]\cdot[HCO_3^-]}{K_1\cdot[H^+]} + \frac{ [H^+]^2\cdot[HCO_3^-]}{K_1 \cdot[H^+]} + \frac{ K_1 \cdot K_{2} \cdot[HCO_3^-]}{K_1 \cdot [H^+]}
@@ -109,42 +110,42 @@ $$
 This equation can easily be solved for $[HCO_3^-]$:
 
 $$
-[HCO_3^-]= \frac{K_{1}\cdot [H^+]}{[H^+]\cdot [H^+] + K_{1}\cdot [H^+] +  K_{1}\cdot K_{2}}\cdot [DIC]
+\boxed{~[HCO_3^-]= \frac{K_{1}\cdot [H^+]}{[H^+]\cdot [H^+] + K_{1}\cdot [H^+] +  K_{1}\cdot K_{2}}\cdot [DIC]~}
 \qquad\hspace{2cm} (5a)
 $$
 
 Combining this result with equation 3a, we obtain 
 
 $$
-[H_2CO_3] = \frac{[H^+]\cdot [H^+]}{[H^+]\cdot [H^+] + K_{1}\cdot [H^+] +  K_{1}\cdot K_{2}}\cdot [DIC]
+\boxed{~[H_2CO_3] = \frac{[H^+]\cdot [H^+]}{[H^+]\cdot [H^+] + K_{1}\cdot [H^+] +  K_{1}\cdot K_{2}}\cdot [DIC]~}
 \qquad\hspace{2cm} (5b)
 $$
 
 Similarly, combining the result with equation 3b, we obtain
 
 $$
-[CO_3^{2-}] = \frac{K_1\cdot K_2}{[H^+]\cdot [H^+] + K_{1}\cdot [H^+] +  K_{1}\cdot K_{2}}\cdot [DIC]
+\boxed{~[CO_3^{2-}] = \frac{K_1\cdot K_2}{[H^+]\cdot [H^+] + K_{1}\cdot [H^+] +  K_{1}\cdot K_{2}}\cdot [DIC]~}
 \qquad\hspace{2cm} (5c)
 $$
 
 Regarding the concentration of $[OH^-]$, it can be calculated from $[H^+]$ based on the relationship 3c. First, by substituting $[H_2O]$ based on the definition of $H_2O_{tot}$, we obtain
 $$
-K_w = \frac{[OH^-]\cdot [H^+]}{[H_2O_{tot}] - [OH^-]},
+K_w' = \frac{[OH^-]\cdot [H^+]}{[H_2O_{tot}] - [OH^-]},
 $$
 which upon rearrangement yields the accurate relationship
 $$
-[OH^-] = \frac{K_w'}{K_w' + [H^+]}\cdot [H_2O_{tot}]. \qquad\hspace{2cm} (5d)
+\boxed{~[OH^-] = \frac{K_w'}{K_w' + [H^+]}\cdot [H_2O_{tot}]~} \qquad\hspace{2cm} (5d)
 $$
-This relationship can be simplified considering that for typical pH values of 1--12, the concentrations of $H^+$ are in the range of $10^{-12}$--$10^{-1}~mol~L^{-1}$. Thus, the dissociation constant $K_w' = 1.81\times10^{-16}~mol~L^{-1}$ in the denominator can be neglected, yielding 
+This relationship can be simplified by considering that for typical pH values of 1--12, the concentrations of $H^+$ are in the range of $10^{-12}$--$10^{-1}~mol~L^{-1}$. Thus, the dissociation constant $K_w' \approx 1.8\times10^{-16}~mol~L^{-1}$ in the denominator can be neglected, yielding 
 $$
 [OH^-] \approx \frac{K_w'}{[H^+]}\cdot [H_2O_{tot}].
 $$
-Using the same argument, the ratio $K_w'/[H^+]$ is in the range of $10^{-15}$--$10^{-4}$, which makes the concentration of $[OH^-]$ negligible in comparison to the concentration of $H_2O$ (i.e., $[H_2O_{tot}]\approx [H_2O]$). Thus, using the last equation, the expression for $[OH^-]$ can be well approximated by\footnote{This result is equivalent to the commonly used expression of the water selfionization equilibrium $K_w = [OH^-]\cdot [H^+]$.}
+Using the same argument, the ratio $K_w'/[H^+]$ is in the range of $10^{-15}$--$10^{-4}$, which makes the concentration of $[OH^-]$ negligible in comparison to the concentration of $H_2O$ (i.e., $[H_2O_{tot}]\approx [H_2O]$). Thus, using the last equation, the expression for $[OH^-]$ can be well approximated by\footnote{This result is equivalent to the commonly used expression governing the water self-ionization equilibrium $K_w = [OH^-]\cdot [H^+]$.}
 $$
-[OH^-] = \frac{K_w}{[H^+]}. \qquad\hspace{2cm} (5d')
+\boxed{~[OH^-] \approx \frac{K_w}{[H^+]}~} \qquad\hspace{2cm} (5d')
 $$
 
-Once the concentrations $[HCO_3^-]$, $[CO_3^{2-}]$, $[OH^-]$, and $[H^+]$ are known, the carbonate alkalinity is calculated based on the definition:
+Once the concentrations $[HCO_3^-]$, $[CO_3^{2-}]$, and $[OH^-]$ are calculated from equations 5 based on the values of $[DIC]$ and $[H^+]$, the alkalinity is calculated from the definition:
 
 $$
 [ALK] = [HCO_3^-] + 2\cdot [CO_3^{2-}] + [OH^-] - [H^+]
@@ -163,7 +164,7 @@ Because $[HCO_3^-]$ and $[CO_3^{2-}]$ depend on $[DIC]$ and $[H^+]$ (see $5a$ an
 
 Note that equation $5e$ is highly non-linear; thus these calculations need to be done *numerically*. This contrasts to Part I of this reader, where it was possible to also find an analytical solution. Although this is no longer possible when the number of fast acid-base reactions (e.g., Reactions 1--3) increases, we can proceed thanks to numerical solvers (see next section).
 
-Another important point to note here is the statement 3: $[H^+]$ *can be calculated* if the values of $[DIC]$ and $[ALK]$ are known. This statement is the basis for the *general* approach in pH modeling: one needs to first *identify the appropriate lump-sum species* (e.g., $DIC$ and $ALK$) and then formulate the *effect of each slow process* on these lump-sum species (e.g., addition or removal of $DIC$ [e.g., 4a] and $ALK$ [e.g., 4b]).\footnote{Strictly speaking, one should also identify the effects of the slow processes on the lump-sum species $H_2O_{tot} = H_2O + OH^-$. However, due to the vastly larger concentration of $H_2O$ in an aquatic setting compared to all other species involved, the effects of processes such as mineral dissolution/precipitation, redox or acid-base reactions, and others, are typically negligible and the water concentration can be considered as constant.} Then, by solving the differential equations for the lump-sum species numerically, one can quantify the corresponding evolution of pH based on the statement 3. This will be illustrated in the following section. 
+Another important point to note here is the statement 3: $[H^+]$ *can be calculated* if the values of $[DIC]$ and $[ALK]$ are known. This statement is the basis for the *general* approach in pH modeling: one needs to first *identify the appropriate lump-sum species* (e.g., $DIC$ and $ALK$) and then formulate the *effect of each slow process* on these lump-sum species (e.g., addition or removal of $DIC$ [e.g., 4a] and $ALK$ [e.g., 4b]).\footnote{Strictly speaking, one should also identify the effects of the slow processes on the lump-sum species $H_2O_{tot} = H_2O + OH^-$. However, due to the vastly larger concentration of $H_2O$ in an aquatic setting compared to all other species involved, the effects of processes such as mineral dissolution/precipitation, redox or acid-base reactions, etc., are typically negligible and the water concentration can be considered as constant.} Then, by solving the differential equations for the lump-sum species numerically, one can quantify the corresponding evolution of pH based on the statement 3, i.e., by numerically solving for $[H^+]$ from Eq. 5e. This will be illustrated in the following section. 
 
 ## Task 5: Application to atmospheric CO$_2$ exchange 
 
@@ -172,7 +173,7 @@ Another important point to note here is the statement 3: $[H^+]$ *can be calcula
 First, we define a function that calculates carbonate alkalinity from the known concentration of DIC and pH (equation 5e).
 
 ```{r}
-solveALK <- function(K1 = 0.773e-06, K2 = 0.352e-09, Kw = 1e-14, DIC, pH){
+solveALK <- function(K1 = 4.44e-07, K2 = 4.67e-11, Kw = 9.91e-15, DIC, pH){
   
   H      <- 10^(-pH)
   HCO3   <- K1*H  / (H^2 + K1*H + K1*K2) * DIC    # eq 5a
@@ -184,10 +185,10 @@ solveALK <- function(K1 = 0.773e-06, K2 = 0.352e-09, Kw = 1e-14, DIC, pH){
 }
 ```
 
-Second, we define a function that calculates $[H^+]$ from the known carbonate alkalinity and DIC concentration (equation 5e). This is done by finding, using a numerical solver, the root of a function defined as the left-hand-side minus the right-hand-side of equation 5e.
+Second, we define a function that calculates $[H^+]$ from the known carbonate alkalinity and DIC concentration (equation 5e). This is done by finding the root of a function defined as the left-hand-side minus the right-hand-side of equation 5e, using a numerical solver.
 
 ```{r}
-solveH <- function(K1 = 0.773e-06, K2 = 0.352e-09, Kw = 1e-14, DIC, ALK){
+solveH <- function(K1 = 4.44e-07, K2 = 4.67e-11, Kw = 9.91e-15, DIC, ALK){
   
   # function whose root has to be sought
   rootFun <- function(H) {
@@ -206,20 +207,20 @@ solveH <- function(K1 = 0.773e-06, K2 = 0.352e-09, Kw = 1e-14, DIC, ALK){
 }
 ```
 
-It is always good to test the functions. For $[DIC] = 2~mmol~L^{-1}$ and $[ALK] = 2.2~mmol~L^{-1}$, we expect $pH$ to be around $8$, and when we substitute that pH value to calculate $[ALK]$, we expect to get the original value. Indeed, the results are as expected:
+It is always good to test the functions. For $[DIC] = 2~mmol~L^{-1}$ and $[ALK] = 2~mmol~L^{-1}$, we expect $pH$ to be around $8$, and when we substitute that pH value to calculate $[ALK]$, we expect to get the original value. Indeed, the results are as expected:
 
 ```{r}
-(pH.new  <- -log10(solveH(DIC = 2.0e-3, ALK = 2.2e-3)))
+(pH.new  <- -log10(solveH(DIC = 2e-3, ALK = 2e-3)))
 (ALK <- solveALK(DIC = 2e-3, pH = pH.new))
 ```
 
-On the other hand, if the water contains no dissolved $CO_2$ ($[DIC] = 0$) and has zero carbonate alkalinity ($[ALK]=0$), we expect its pH to be 7. Indeed, that is what we obtain:
+On the other hand, if the water is pure, i.e., has zero $[DIC]$ and $[ALK]$, we expect its pH to be close to 7 (i.e., $pH=-log_{10}(\sqrt{K_w})$, as follows from Eqs. $5e$ and $5d'$). Indeed, that is what we obtain:
 
 ```{r}
 (pH.neutral  <- -log10(solveH(DIC = 0, ALK = 0)))
 ```
 
-The model function that implements the model based on the local equilibrium assumption is defined below. Note that the equilibrium constants (dissociation constants) are in $mol~L^{-1}$, so all species should be in this unit!
+The model function that implements the model based on the local equilibrium assumption is defined below. Note that the equilibrium constants (dissociation constants) are in $mol~L^{-1}$, so all species must be in this unit, too!
 
 ```{r}
 CO2dissol <- function(t, state, parms) {
@@ -246,13 +247,13 @@ CO2dissol <- function(t, state, parms) {
 
 Now we run the model for 10 days, using the initial conditions given in the task.
 
-```{r, fig.height=6, fig.width=10}
+```{r, fig.height=6, fig.width=10, message=FALSE}
 require(deSolve)
 
 pars    <- c(RC = 0.1e-3,    # [mol/L/day]
-             K1 = 0.773e-06, #K1 = 1.422e-06, # [mol/L]
-             K2 = 0.352e-09, #K2 = 1.082e-09, # [mol/L]
-             Kw = 1e-14)     # [mol^2/L^2]
+             K1 = 4.44e-07,  # [mol/L]
+             K2 = 4.67e-11,  # [mol/L]
+             Kw = 9.91e-15)  # [mol^2/L^2]
 
 pH.ini  <- 8
 DIC.ini <- 2e-3
@@ -266,4 +267,4 @@ out     <- ode(y=yini, times=times, func=CO2dissol, parms=pars)
 plot(out, mfrow = c(2,4), las = 1)
 ```
 
-We see that the addition of $CO_2$ at the given rate leads to an acidification of the water from the initial pH of 8 to pH of about 6.5 after 10 days.
+We see that the addition of $CO_2$ at the given rate leads to an acidification of the water from the initial pH of 8 to pH of about 6.6 after 10 days.
