--- a/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_Q.Rmd
+++ b/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_Q.Rmd
@@ -31,11 +31,11 @@ $$ Reaction~3: \quad H_2O \leftrightarrow OH^- + H^+$$
 
 We will therefore consider a system of *six* chemical species --- carbonic acid ($H_2CO_3$), bicarbonate ($HCO_3^-$), carbonate ($CO_3^{2-}$), water ($H_2O$), hydroxide ($OH^-$), and protons ($H^+$) --- all of them coupled via the fast reversible reactions 1--3. The aim here is to model how this coupling affects the dynamics of pH if one of the components, specifically $H_2CO_3$, is added to/removed from the system at a rate that is much slower than the rate of the reversible reactions.\footnote{This process could be, for example, the addition of $H_2CO_3$ due to the exchange with atmospheric CO$_2$ or due to the mineralization of organic matter. Note that each of these processes is already a two-step process: the addition of CO$_2$ to water, which is a slow irreversible process, followed by a chemical reaction $CO_2 + H_2O \leftrightarrow H_2CO_3$, which is a fast reversible process. However, because the rate of the overall process is limited by the rate of the slow process, we can consider the net effect of these two processes to be a slow addition of $H_2CO_3$. Depending on the perspective, and given the reactions 1 and 2, one can also consider it as a slow addition of $HCO_3^- + H^+$ or $CO_3^{2-} + 2H^+$. However, here we will consider $H_2CO_3$ as the added species because the ultimate source is the $CO_2$ molecule from the atmosphere or mineralized organic matter.} 
 
-The overall approach will be analogous to that developed in Part I, although the mathematical treatment will be more challenging due to the greater number of species (6 instead of 3) and reactions (3 instead of 1) involved. Specifically, since we are only interested in modelling the dynamics due to the slow process, we can significantly simplify the model by reformulating it in terms of "lump-sum" species. We will show that for the fast equilibration reactions 1--3, these new lump-sum species are the total dissolved inorganic carbon, $DIC = H_2CO_3  + HCO_3^- + CO_3^{2-}$, the carbonate alkalinity, $ALK = HCO_3^- + 2\cdot CO_3^{2-} + OH^- - H^+$, and the total hydroxide, $H_2O_{tot} = H_2O + OH^-$. 
+The overall approach will be analogous to that developed in Part I, although the mathematical treatment will be more challenging due to the greater number of species (6 instead of 3) and reactions (3 instead of 1) involved. Specifically, since we are only interested in modelling the dynamics due to the slow process, we can significantly simplify the model by reformulating it in terms of "lump-sum" species. We will show that for the fast equilibration reactions 1--3, these new lump-sum species are the total dissolved inorganic carbon, $DIC = H_2CO_3  + HCO_3^- + CO_3^{2-}$, alkalinity (representing the total excess negative charge), $ALK = HCO_3^- + 2\cdot CO_3^{2-} + OH^- - H^+$, and the total hydroxide, $H_2O_{tot} = H_2O + OH^-$. 
 
 Ultimately, we will illustrate here how pH modelling is gradually developed when the number of fast acid-base reactions is increased from 1 (as in Part I) to 3. Once this is understood, one can further expand the approach to any number of acid-base reactions.
 
-# Approach
+# Tasks
 
 The aproach followed in this Reader is based on a set of tasks that you should be able to solve on your own if you have understood the material presented in Part I of the Reader. It is challenging --- but possible, if you are motivated, persistent, and patient. If you feel you are stuck, you can of course look up the solutions provided at the end of this document. But we encourage you to try first on your own.
 
@@ -54,7 +54,27 @@ Assume that the rate of the slow process is zero ($R_C=0$). Using the mass balan
 
 * derive relationships between the equilibrium concentrations of the state variables describing the system. Hint: consider that the time-derivatives of the state variables are zero when the system is in equilibrium.
 
-You should arrive at *three* equations that relate the equilibrium concentrations of [$H_2CO_3$], [$HCO_3^-$], [$CO_3^{2-}$], [$H_2O$], [$OH^-$], and [$H^+$]. To simplify the relationships, define the ratios between the forward and backward rate constants as the so-called dissociation constants: $K_1 = k_{1f}/k_{1b}$, $K_2 = k_{2f}/k_{2b}$, and $K_w' = k_{3f}/k_{3b}$. For a temperature of $25\,^\circ$C, salinity 0 and pressure of 1 bar, their values are approximately $K_1 = 0.773\times10^{-6}~mol~L^{-1}$, $K_2=0.352\times10^{-9}~mol~L^{-1}$, and $K_w' = 1.81\times10^{-16}~mol~L^{-1}$, where the latter value is calculated according to $K_w' = K_w/[H_2O]$ using $K_w= [OH^-]\cdot [H^+] = 1\times 10^{-14}~mol^2~L^{-2}$ for the \emph{ionic product of water} (Hawkes, 1995) and $[H_2O] \approx 55.3~mol~L^{-1}$ for the concentration of water.\footnote{The water concentration is derived from the density ($997~kg~m^{-3}$) and molar weight ($18.0153~g~mol^{-1}$) of pure water at $25\,^\circ$C.} The values for these constants at other conditions can be calculated using R-packages *seacarb* (Gattuso et al., 2020) and *AquaEnv* (Hofmann et al., 2010). 
+You should arrive at *three* equations that relate the equilibrium concentrations of [$H_2CO_3$], [$HCO_3^-$], [$CO_3^{2-}$], [$H_2O$], [$OH^-$], and [$H^+$]. To simplify the relationships, define the ratios between the forward and backward rate constants as the so-called dissociation constants: $K_1 = k_{1f}/k_{1b}$, $K_2 = k_{2f}/k_{2b}$, and $K_w' = k_{3f}/k_{3b}$, where the latter value is related to the \emph{ionic product of water}, $K_w = [OH^-]\cdot [H^+]$, and water concentration, $[H_2O]$, according to $K_w' = K_w/[H_2O]$. For water with different salinities and temperatures, their values can be calculated using the *AquaEnv* package (Hofmann et al., 2010). At $25\,^\circ$C, salinity 0, and pressure of 1 bar, the corresponding values are 
+```{r, message=FALSE}
+require(AquaEnv)
+
+# water properties
+a     <- aquaenv(S=0, t=25, k1k2="millero")
+rho   <- a$density  # density, g/L
+MW    <- 18.0153    # molar weight, g/mol
+cH2O  <- rho/MW     # concentration, mol/L
+
+# dissociation constants (converted from mol/kg-soln -> mol/L)
+K1       <- a$K_CO2  * 1e-3 * rho   # mol/L
+K2       <- a$K_HCO3 * 1e-3 * rho   # mol/L
+KW       <- a$K_W    * 1e-6 * rho^2 # (mol/L)^2
+KW.prime <- KW       / cH2O         # mol/L
+
+knitr::kable(cbind(c("$K_1$", "$K_2$", "$K_w$", "$K_w'$", "density", "concentration"),
+                   format(c(K1, K2, KW, KW.prime, rho, cH2O),digits=3),
+                   c("$mol~L^{-1}$", "$mol~L^{-1}$", "$mol^2~L^{-2}$", "$mol~L^{-1}$", 
+                     "$g~L^{-1}$", "$mol~L^{-1}$")))
+```
 
 ## Task 3: Lump-sum species
 
@@ -81,5 +101,5 @@ Consider freshwater with a pH of 8 and a DIC concentration of $2~mmol~L^{-1}$. A
 
 * Write a model to predict the dynamics of the carbonate species, alkalinity and pH due to this process. You can start with the R-markdown template model file *RTM_equilibrium.Rmd*.\footnote{You can obtain this file from Rstudio: File $\rightarrow$ new File $\rightarrow$ Rmarkdown $\rightarrow$ from template $\rightarrow$ RTM\_equilibrium. Save this file under a different name, do not forget to change the heading of this file.}
 
-Implement the model for the temperature of 25 $^\circ$C, salinity of 0, and pressure of 1 bar. For these conditions, the approximate values of the dissociation constants $K_1$, $K_2$, and $K_w$ are given above. You can start with the R-markdown template model file *RTMtemplate0D.Rmd* to implement this model.\footnote{You can obtain this file from Rstudio: File $\rightarrow$ new File $\rightarrow$ Rmarkdown $\rightarrow$ from template $\rightarrow$ RTMtemplate0D. Save this file under a different name, do not forget to change the heading of this file.}
+Implement the model for the temperature of 25 $^\circ$C, salinity of 0, and pressure of 1 bar. For these conditions, the approximate values of the dissociation constants $K_1$, $K_2$, and $K_w'$ are given above. You can start with the R-markdown template model file *RTMtemplate0D.Rmd* to implement this model.\footnote{You can obtain this file from Rstudio: File $\rightarrow$ new File $\rightarrow$ Rmarkdown $\rightarrow$ from template $\rightarrow$ RTMtemplate0D. Save this file under a different name, do not forget to change the heading of this file.}
 
